deploy/k3s/00-namespace.yaml
#
# SPDX-FileCopyrightText: Copyright The Thingsboard Authors
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: v1
kind: Namespace
metadata:
  name: thingsboard
  labels:
    app.kubernetes.io/part-of: thingsboard
